--- a/package.json
+++ b/package.json
@@ -10,13 +10,20 @@
   },
   "dependencies": {
     "@coinbase/wallet-sdk": "^4.3.2",
+    "@radix-ui/react-slot": "^1.2.2",
     "@supabase/supabase-js": "^2.49.4",
     "@tanstack/react-query": "^5.76.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.510.0",
     "next": "15.3.2",
+    "next-themes": "^0.4.6",
     "openai": "^4.98.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-markdown": "^10.1.0",
+    "sonner": "^2.0.3",
+    "tailwind-merge": "^3.3.0",
     "viem": "^2.29.2",
     "wagmi": "^2.15.2"
   },
@@ -29,6 +36,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.3.2",
     "tailwindcss": "^4",
+    "tw-animate-css": "^1.2.9",
     "typescript": "^5"
   }
 }
