--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next": "15.3.2",
     "next-themes": "^0.4.6",
     "openai": "^4.98.0",
+    "pino-pretty": "^13.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-markdown": "^10.1.0",
