--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.3.0",
     "viem": "^2.29.2",
-    "wagmi": "^2.15.2"
+    "wagmi": "^2.15.2",
+    "zod": "^3.24.4"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
