--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@ai-sdk/openai": "^1.3.22",
     "@coinbase/wallet-sdk": "^4.3.2",
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-slot": "^1.2.2",
     "@supabase/supabase-js": "^2.49.4",
     "@tanstack/react-query": "^5.76.0",
