--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@ai-sdk/openai": "^1.3.22",
     "@coinbase/wallet-sdk": "^4.3.2",
+    "@neynar/nodejs-sdk": "^2.44.0",
     "@privy-io/react-auth": "^2.13.3",
+    "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-slot": "^1.2.2",
     "@supabase/supabase-js": "^2.49.4",
