--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
     "@ai-sdk/openai": "^1.3.22",
     "@coinbase/wallet-sdk": "^4.3.2",
     "@neynar/nodejs-sdk": "^2.44.0",
+    "@pinata/sdk": "^2.1.0",
     "@privy-io/react-auth": "^2.13.3",
+    "@privy-io/server-auth": "^1.19.0",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-slot": "^1.2.2",
     "@supabase/supabase-js": "^2.49.4",
     "@tanstack/react-query": "^5.76.0",
+    "@zoralabs/coins-sdk": "^0.1.1",
     "ai": "^4.3.16",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -32,7 +35,7 @@
     "react-markdown": "^10.1.0",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.3.0",
-    "viem": "^2.29.2",
+    "viem": "^2.23.14",
     "wagmi": "^2.15.2",
     "zod": "^3.25.7"
   },
