refactor: update dependencies and enhance coin creation API
- Upgraded `@zoralabs/coins-sdk` to version 0.2.5 and added `abitype` as a new dependency for improved type handling.
- Implemented a new POST endpoint in the coins API to handle coin creation, including validation and IPFS integration for metadata and images.
- Removed the deprecated create-metadata route to streamline the API structure.
- Enhanced error handling and logging for better debugging and user feedback during the coin creation process.
- Updated documentation to reflect changes in the game creation workflow and token economics.

--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "@supabase/supabase-js": "^2.49.4",
     "@tanstack/react-query": "^5.76.0",
     "@types/jsdom": "^21.1.7",
-    "@zoralabs/coins-sdk": "^0.1.1",
+    "@zoralabs/coins-sdk": "^0.2.5",
+    "abitype": "^1.0.8",
     "ai": "^4.3.16",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
