--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-slot": "^1.2.2",
+    "@radix-ui/react-tabs": "^1.1.12",
     "@supabase/supabase-js": "^2.49.4",
     "@tanstack/react-query": "^5.76.0",
     "@types/jsdom": "^21.1.7",
